# coursework_5

./: .gitignore  README.md  employers.txt  main.py  pyproject.toml  queries.sql
src/: .gitignore  api.py  config.py  database.ini.example  db_utils.py  dbmanager.py  utils.py  vacancy.py
